fix menu on iphone

--- a/sass/_rail.scss
+++ b/sass/_rail.scss
@@ -110,7 +110,7 @@
         .search {
             position: relative;
             input[type="search"] {
-                width: 200px;
+                width: 210px;
                 margin-left: 22px;
                 padding: 0 33px 0 10px;
             }
